1999-01-27  Jeff Garzik  <jgarzik@pobox.com>

	* gnome-popup-help.c:
	Correct g_malloc call to avoid using sizeof with an array idx.

1999-01-27  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-dock-band.c (gnome_dock_band_unmap): new function.
	now a dock band can be properly hidden.
	* gnome-dock.c (gnome_dock_unmap): new function.
	(unmap_widget, unmap_band_list, unmap_widget_foreach): new
	helper functions.
	now a dock can be properly hidden.

1999-01-27  Jeff Garzik  <jgarzik@pobox.com>

	* gnome-app-helper.c, gnome-init.c, gnome-spell.c:
	Use autoconf incantation to include alloca.h properly.

	* gnome-less.c:
	Replace static const with a #define, Sun CC breaks if an array
	is sized with a variable (yes, even a const one... grrr).

1999-01-27  Felix Bellaby <felix@pooh.u-net.com>

	* gnome-client.c (save_yourself_callback) wait for any pointer grab 
	to be released before grabbing gtk input.
	(gnome_client_save_dialog_show): set win_hints to LAYER_OVER_DOCK.
	(gnome_client_setpriority): #ifdef out SMLIB dependent code (patch
	by Frederic Devernay <devernay@istar.fr>).
	* gnome-init.c (gnome_init_with_popt_table) initialize win_hints code.
	* gnome-winhints.h: acknowledge change to gnome-init.c in comment.
	
1999-01-27  Andrew T. Veliath  <andrewtv@usa.net>

	* gnome-app-helper.[ch]: Add gnome_app_fill_{menu,toolbar}_with_data
	functions to match gnome_app_create...with_data versions.

1999-01-27  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (INCLUDES): Use G_LOG_DOMAIN of "GnomeUI".
	Suggested by Tim Janik <timj@gtk.org>.

1999-01-26  Jonathan Blandford  <jrb@redhat.com>

	* gnome-icon-entry.c (gnome_icon_entry_set_icon): added new
	function to get around the old braindead way of setting the icon.

	* gnome-dialog.c (gnome_dialog_set_parent): Commented the below
	change.

	* gnome-file-entry.c (browse_clicked): This now will set it's file
	dialog to be modal.  In addition, it does the equivilent of the