@@ -227,7 +227,7 @@ gnome_init_cb(poptContext ctx, enum poptCallbackReason reason,
 			gdk_imlib_get_cache_info (&pixmaps, &images);
 
 			if (!(pixmaps == -1 || images == -1))
-				gdk_imlib_set_cache_info (0, 1);
+				gdk_imlib_set_cache_info (0, images);
 		}
 	  
 #ifdef USE_SEGV_HANDLE
