@@ -1,3 +1,9 @@
+1999-01-27  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* gnome-pixmap-entry.c (entry_changed): Use GNOME pixmap here to
+	avoid problems in multidepth visuals.
+	(setup_preview): Here too.
+
 1999-01-27  Jeff Garzik  <jgarzik@pobox.com>
 
 	* gnome-popup-help.c:
